Fix the misalignment of the top left header link in Firefox
In firefox the top left header link text is misaligned with the ID
image. This commit ensures that the text is placed in the middle of the
vertical alignment.

--- a/themes/inercia/assets/css/styles.css
+++ b/themes/inercia/assets/css/styles.css
@@ -1742,7 +1742,7 @@ thead .o-timetable__cell {
 
 .b-siteNav__container a img {
 	height: 100%;
-	vertical-align: top;
+	vertical-align: middle;
 }
 
 
